--- a/etl.ipynb
+++ b/etl.ipynb
@@ -798,6 +798,91 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "drop table users;\n",
+      "failed  drop table users;\n",
+      "drop table songs;\n",
+      "failed  drop table songs;\n",
+      "drop table artists;\n",
+      "failed  drop table artists;\n",
+      "drop table time;\n",
+      "failed  drop table time;\n",
+      "drop table songplays;\n",
+      "failed  drop table songplays;\n",
+      "\n",
+      "    create table if not exists users(\n",
+      "        user_id int, \n",
+      "        first_name varchar, \n",
+      "        last_name varchar, \n",
+      "        gender varchar, \n",
+      "        level varchar, \n",
+      "        primary key(user_id)\n",
+      "    );\n",
+      "\n",
+      "\n",
+      "    create table if not exists songs(\n",
+      "        song_id varchar, \n",
+      "        title varchar not null, \n",
+      "        artist_id varchar, \n",
+      "        year int, \n",
+      "        duration decimal not null, \n",
+      "        primary key (song_id)\n",
+      "    );\n",
+      "\n",
+      "\n",
+      "    create table if not exists artists(\n",
+      "        artist_id varchar, \n",
+      "        name varchar not null, \n",
+      "        location varchar, \n",
+      "        latitude float, \n",
+      "        longitude float, \n",
+      "        primary key (artist_id)\n",
+      "    );\n",
+      "\n",
+      "\n",
+      "    create table if not exists time(\n",
+      "        start_time bigint, \n",
+      "        hour int, \n",
+      "        day int, \n",
+      "        week int, \n",
+      "        month int, \n",
+      "        year int, \n",
+      "        weekday int\n",
+      "    );\n",
+      "\n",
+      "\n",
+      "    create table if not exists songplays(\n",
+      "        songplay_id serial primary key,\n",
+      "        start_time bigint not null, \n",
+      "        user_id int not null, \n",
+      "        level varchar, \n",
+      "        song_id varchar, \n",
+      "        artist_id varchar, \n",
+      "        session_id int, \n",
+      "        location varchar, \n",
+      "        user_agent varchar,\n",
+      "        constraint fk_user foreign key (user_id) references users(user_id),\n",
+      "        constraint fk_song foreign key (song_id) references songs(song_id),\n",
+      "        constraint fk_artist foreign key (artist_id) references artists(artist_id)\n",
+      "    );\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "%run -i 'create_tables.py'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "editable": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "71 files found in data/song_data\n",
       "1/71 files processed.\n",
       "2/71 files processed.\n",
